test/Dialect/LLZK_and_Builtin/module_only_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

modules {} // expected-error {{custom op 'modules' is unknown}}
